--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -12,12 +12,9 @@ spec:
               repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: applicationset/examples/matrix/cluster-addons/*
+                - path: applicationset/examples-apps/*
           # cluster generator, 'child' #2
-          - clusters:
-              selector:
-                matchLabels:
-                  argocd.argoproj.io/secret-type: cluster
+          - clusters: {}
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
