--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -12,16 +12,19 @@ spec:
               repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: applicationset/examples-apps/*
+                - path: applicationset/examples/matrix/cluster-addons/*
           # cluster generator, 'child' #2
-          - clusters: {}
+          - clusters:
+              selector:
+                matchLabels:
+                  argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
       project: '{{metadata.labels.environment}}'
       source:
-        repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
+        repoURL: https://github.com/argoproj/argo-cd.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
