--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -12,17 +12,16 @@ spec:
               repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: application-sets/example-apps/*
+                - path: pplication-sets/example-apps/*
           # cluster generator, 'child' #2
           - clusters: {}
-             
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
       project: '{{metadata.labels.environment}}'
       source:
-        repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
+        repoURL: https://github.com/argoproj/argo-cd.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
