--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -9,12 +9,15 @@ spec:
         generators:
           # git generator, 'child' #1
           - git:
-              repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
+              repoURL: https://github.com/argoproj/argo-cd.git
               revision: HEAD
               directories:
-                - path: pplication-sets/example-apps/*
+                - path: applicationset/examples/matrix/cluster-addons/*
           # cluster generator, 'child' #2
-          - clusters: {}
+          - clusters:
+              selector:
+                matchLabels:
+                  argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
