--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -22,7 +22,7 @@ spec:
     spec:
       project: '{{metadata.labels.environment}}'
       source:
-        repoURL: https://github.com/argoproj/argo-cd.git
+        repoURL: https://github.com/Amikh/gitops-cert-level-2-examples
         targetRevision: HEAD
         path: '{{path}}'
       destination:
