--- a/application-sets/generators/many-apps-many-cluster.yml
+++ b/application-sets/generators/many-apps-many-cluster.yml
@@ -1,32 +1,39 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: cluster-git
+  name: many-apps-many-clusters
 spec:
   generators:
-    # matrix 'parent' generator
+    # Matrix generator combines Git (apps) + Clusters
     - matrix:
         generators:
-          # git generator, 'child' #1
+          # 1️⃣ Git generator - iterate over all application folders
           - git:
-              repoURL: https://github.com/argoproj/argo-cd.git
+              repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: applicationset/examples/matrix/cluster-addons/*
-          # cluster generator, 'child' #2
-          - clusters:
-              selector:
-                matchLabels:
-                  argocd.argoproj.io/secret-type: cluster
+                - path: application-sets/example-apps/*
+
+          # 2️⃣ Cluster generator - iterate over all connected clusters
+          - clusters: {}
+
+  # Template for each generated Application
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: '{{metadata.labels.environment}}'
+      project: default
       source:
-        repoURL: https://github.com/argoproj/argo-cd.git
+        repoURL: https://github.com/Amikh/gitops-cert-level-2-examples.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
         server: '{{server}}'
         namespace: '{{path.basename}}'
+
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
