--- a/application-sets/generators/many-apps-many-cluster.yml
+++ b/application-sets/generators/many-apps-many-cluster.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: sealed-secrets-many-clusters
+  name: sealed-secrets
 spec:
   generators:
     - clusters: {}
